[package]
name = "github-cors-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
moka = { version = "0.12", features = ["sync"] }
bytes = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
